--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.2",
     "antd": "^5.7.2",
     "apexcharts": "^3.41.1",
     "date-fns": "^2.0.0-beta.5",
