--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tirapongice.github.io/ExpenseManager/",
   "name": "expense-manager",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "apexcharts": "^3.41.1",
     "date-fns": "^2.0.0-beta.5",
     "dayjs": "^1.11.9",
+    "gh-pages": "^5.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -18,6 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
