--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tirapongice.github.io/ExpenseManager/",
+  "homepage": "https://tirapongice.github.io/ExpenseManager/",
   "name": "expense-manager",
   "version": "0.1.0",
   "private": true,
